--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.0.9",
     "@chakra-ui/react": "^2.2.8",
-    "@chakra-ui/theme": "^2.1.7",
+    "@chakra-ui/theme": "^2.1.8",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,6 +14,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.27.2",
     "framer-motion": "^7.2.1",
+    "npm": "^8.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
