--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "aos": "^3.0.0-beta.6",
+    "aos": "^2.3.4",
     "axios": "^0.27.2",
     "framer-motion": "^7.2.1",
     "npm": "^8.18.0",
