--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "framer-motion": "^7.2.1",
     "npm": "^8.18.0",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-moment": "^1.1.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
