--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^7.2.1",
     "npm": "^8.18.0",
     "react": "^18.2.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
