--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "json-server": "^0.17.0",
     "npm": "^8.18.0",
     "react": "^18.2.0",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
